// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typescript-css-modules build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/vendors~main-cb9dd1c068af0c566003.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/main-02036277a825a8a29f53.js\\">
<link data-chunk=\\"main\\" rel=\\"stylesheet\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\"><div class=\\"_3YtmnHj lwsthgY\\" data-automation-text=\\"true\\">Hello World</div></div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4003/vendors~main-cb9dd1c068af0c566003.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4003/main-02036277a825a8a29f53.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/vendors~main-cb9dd1c068af0c566003.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/main-02036277a825a8a29f53.js\\">
<link data-chunk=\\"main\\" rel=\\"stylesheet\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\"><div class=\\"_3YtmnHj lwsthgY\\" data-automation-text=\\"true\\">Hello World</div></div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/vendors~main-cb9dd1c068af0c566003.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/main-02036277a825a8a29f53.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build should generate the expected files 1`] = `
Object {
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/vendors~main-cb9dd1c068af0c566003.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/main-02036277a825a8a29f53.js\\">
<link data-chunk=\\"main\\" rel=\\"stylesheet\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\"><div class=\\"_3YtmnHj lwsthgY\\" data-automation-text=\\"true\\">Hello World</div></div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/runtime-1dabfc1890e798beba49.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/vendors~main-cb9dd1c068af0c566003.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/main-02036277a825a8a29f53.js\\"></script>
  </body>
</html>",
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "main-02036277a825a8a29f53.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-bfe8911084b821bf8edd.css": "._1brbpTo{display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
",
  "runtime-1dabfc1890e798beba49.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-cb9dd1c068af0c566003.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules build-ssr should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/runtime-3fcd94aac7fd64fcdc37.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/vendors~main-3e4982c4018de00003e8.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/main-788412e48c599883634a.js\\">
<link data-chunk=\\"main\\" rel=\\"stylesheet\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\"><div class=\\"_3YtmnHj lwsthgY\\" data-automation-text=\\"true\\">Hello World</div></div></div>
          <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4003/runtime-3fcd94aac7fd64fcdc37.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4003/vendors~main-3e4982c4018de00003e8.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4003/main-788412e48c599883634a.js\\"></script>
        
      
    </body></html>",
  "errors": Array [],
  "sourceHtml": "
      <!DOCTYPE html>
      <html>
        <head>
          <meta charset=\\"UTF-8\\">
          <title>My Awesome Project</title>
          <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
          <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/runtime-3fcd94aac7fd64fcdc37.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/vendors~main-3e4982c4018de00003e8.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"style\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4003/main-788412e48c599883634a.js\\">
<link data-chunk=\\"main\\" rel=\\"stylesheet\\" href=\\"http://localhost:4003/main-bfe8911084b821bf8edd.css\\">
        </head>
        <body>
          <div id=\\"app\\"><div class=\\"_1brbpTo Jlnxw97\\"><div class=\\"_3YtmnHj lwsthgY\\" data-automation-text=\\"true\\">Hello World</div></div></div>
          <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/runtime-3fcd94aac7fd64fcdc37.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/vendors~main-3e4982c4018de00003e8.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4003/main-788412e48c599883634a.js\\"></script>
        </body>
      </html>
    ",
  "warnings": Array [],
}
`;

exports[`typescript-css-modules build-ssr should generate the expected files 1`] = `
Object {
  "jsStyles.css.js.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "lessStyles.less.d.ts": "// This file is automatically generated.
// Please do not change this file!
export const root: string;
export const nested: string;
",
  "main-788412e48c599883634a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-bfe8911084b821bf8edd.css": "._1brbpTo{display:-webkit-flex;display:-ms-flexbox;display:flex}._1brbpTo ._3YtmnHj{font-size:32px}
.Jlnxw97{-webkit-align-items:center;-ms-flex-align:center;align-items:center}.Jlnxw97 .lwsthgY{color:red}
",
  "runtime-3fcd94aac7fd64fcdc37.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "server.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-3e4982c4018de00003e8.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`typescript-css-modules start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~main.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"style\\" href=\\"/main.css\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/main.js\\">
<link data-chunk=\\"main\\" rel=\\"stylesheet\\" href=\\"/main.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\" data-automation-text=\\"true\\">Hello World</div></div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"/runtime.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"/vendors~main.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"/main.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>My Awesome Project</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~main.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"style\\" href=\\"/main.css\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/main.js\\">
<link data-chunk=\\"main\\" rel=\\"stylesheet\\" href=\\"/main.css\\">
  </head>
  <body>
    <div id=\\"app\\"><div class=\\"lessStyles__root___1brbpTo jsStyles-css__root___Jlnxw97\\"><div class=\\"lessStyles__nested___3YtmnHj jsStyles-css__nested___lwsthgY\\" data-automation-text=\\"true\\">Hello World</div></div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"main\\" src=\\"/runtime.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"/vendors~main.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"/main.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
